# template-fizz-buzz

./: README.md  package.yaml  template-fizz-buzz.cabal
app/: ack.hs  ackWithTH.hs  fizzbuzz.hs  useFoo.hs
src/: Ackermann.hs  Foo.hs
